--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: KrillGuard
 author:
   name: Oliver White
-  email: o.william.white@gmail.com
+  email: "o.william.white@gmail.com"
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
