--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ plugins:
 # in order as they should show up.
 header_pages:
   - about.md
+  - news.md
+  - contact.md
 
 # Set to `true` to show excerpts on the homepage.
 #show_excerpts: false
