--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ plugins:
 #  - contact.md
 
 # Set to `true` to show excerpts on the homepage.
-#show_excerpts: false
+show_excerpts: true
 
 # Minima specific settings, which are only available from Minima 3.0 onward.
 minima:
