--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,10 @@ plugins:
 
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
-# header_pages:
-#  - about.md
+header_pages:
+  - about.md
+  - discovery-collections.md
+  - meet-the-team.md
 
 
 # Set to `true` to show excerpts on the homepage.
